apps/base/kyverno/tests/mutations/resources/deployment-observability.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-observability
  namespace: observability
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          image: busybox:1.36
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
