apps/base/kyverno/tests/mutations/resources/job-other-ns.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: job-other-ns
  namespace: default
spec:
  template:
    metadata:
      labels:
        app: test-hook
    spec:
      restartPolicy: Never
      containers:
        - name: test
          image: busybox:1.36
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
